# rusftp

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
examples/: simple_client.rs
src/: client.rs  decoder.rs  encoder.rs  error.rs  lib.rs  utils.rs
src/client/: commands.rs  dir.rs  error.rs  file.rs  mod.rs  receiver.rs  request.rs  stop.rs
src/client/dir/: close.rs  mod.rs  stream.rs
src/client/file/: close.rs  mod.rs  read.rs  seek.rs  write.rs
src/error/: mod.rs  wire_format.rs
src/message/: attrs.rs  close.rs  data.rs  extended.rs  extended_reply.rs  fsetstat.rs  fstat.rs  handle.rs  init.rs  lstat.rs  mkdir.rs  mod.rs  name.rs  open.rs  opendir.rs  path.rs  read.rs  readdir.rs  readlink.rs  realpath.rs  remove.rs  rename.rs  rmdir.rs  setstat.rs  stat.rs  status.rs  symlink.rs  test_utils.rs  version.rs  write.rs
src/wire/: decoder.rs  encoder.rs  error.rs  mod.rs
