[package]
name = "rusftp"
version = "0.1.0"
authors = ["Florian Lemaitre <flemaitre@aneo.fr>"]
description = "SFTP library based on russh"
repository = "https://github.com/aneoconsulting/rusftp"
license = "Apache-2.0"
edition = "2021"
include = ["**/*.rs", "Cargo.toml", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { version = "1.4", features = ["serde"] }
futures = "0.3"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
russh = "0.39"
serde = "1.0"
thiserror = "1.0"
